fixed bug with wrong popup position on mobile devices, added missing shadows

--- a/less/styles.less
+++ b/less/styles.less
@@ -240,6 +240,7 @@
 .objectives-list-item {
     border-bottom-color: @objectives-list-item-border-color;
     border-radius: @objective-list-item-border-radius;
+    box-shadow:  0px 1px 3px 0px rgba(0,0,0,0.3);
 
 	&.disabled {
 		cursor: default;
@@ -344,9 +345,9 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 630px;
+        width: 595px;
         margin-top: -300px;
-        margin-left: -315px;
+        margin-left: -298px;
         text-align: left;
 
         &:after {
@@ -361,7 +362,7 @@
         .top-section {
             position: relative;
             height: 27px;
-            width: 605px;
+            width: 570px;
             background-color: @finish-course-popup-color;
             background-image: @finish-course-popup-background-image;
             background-repeat: repeat;
